@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-22T08:11:12Z",
-  "count_outdated" : 132,
-  "uniques_outdated" : 9,
-  "count" : 324,
+  "timestamp" : "2022-05-23T00:45:35Z",
+  "count_outdated" : 199,
+  "uniques_outdated" : 10,
+  "count" : 390,
   "uniques" : 19,
   "views" : [
-    {
-      "timestamp": "2022-05-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 67 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 28,
