@@ -1,12 +1,7 @@
 {
-  "count": 192,
+  "count": 191,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-05-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 28,
