@@ -1,3 +1,10 @@
+2022-05-23T00:45:35Z:
+* notice: last 14d: unq all: 1 191
+* notice: prev accum: outdated-unq outdated-all / unq all: 9 132 / 19 324
+* notice: next accum: outdated-unq outdated-all / unq all: 10 199 / 19 390
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-22T08:11:12Z:
 * notice: last 14d: unq all: 1 192
 * notice: prev accum: outdated-unq outdated-all / unq all: 9 132 / 19 384
